--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -703,9 +703,9 @@ $border-main-color: #bbb;
 }
 .ArtworkInfo-container{
     position: absolute;
-    left: 0;
+    left: -1px;
     background-color: white;
-    width: 100%;
+    width: calc(100% + 1px);
     z-index: 2;
     transition: 0.4s all;
     bottom: -100%;
