--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -440,6 +440,7 @@ $border-main-color: #bbb;
 }
 .imageSelect-container{
     height: 100%;
+    width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: $background-color;
@@ -459,6 +460,16 @@ $border-main-color: #bbb;
     width: 4vw;
     min-width: 45px;
     cursor: pointer;
+}
+.Nav-infoButton{
+    position: absolute;
+    top: 16vw;
+    left: 0;
+    width: 4vw;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .Nav-button_next{
     top: 8vw;
@@ -795,3 +806,71 @@ $border-main-color: #bbb;
     bottom: -100%;
     cursor: default;
 }
+
+@media only screen and (max-width: 720px) {
+    .frontEndIndex-container{
+        grid-template-columns: 100%;
+        grid-template-rows: auto 1fr 45px;
+    }
+    .TagsMenu-container{
+        grid-row-start: 1;
+        grid-row-end: 2;
+        width: 100%;
+    }
+    .images-container{
+        grid-row-start: 2;
+        grid-row-end: 3;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: max-content 1fr;
+        overflow: hidden;
+        border-left: 1px solid;
+    }
+    .imageSelect-container{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        bottom: 0;
+        border-right: 1px solid;
+    }
+    .enlargeContainer{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        transform: translateY(-100%);
+    }
+    .enlargeContainer > div {
+        height: 100% !important;
+        width: auto !important;
+    }
+    .enlargeContainer{
+        border-top: none;
+        border-bottom: none;
+    }
+    .Navbar{
+        position: relative;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        width: 100%;
+        height: 45px;
+        display: flex;
+        justify-content: space-between;
+        border-top: none;
+        border-left: 1px solid;
+    }
+    .Nav-button{
+        height: 100%;
+        width: 55px;
+        position: initial;
+    }
+    .Nav-button_next{
+        order: 3;
+    }
+  }
