--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -449,7 +449,6 @@ label {
   background-color: white;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  border-right: 1px solid black;
   border-bottom: 1px solid black;
   overflow-y: auto;
 }
@@ -552,11 +551,23 @@ label {
 .move-left {
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
+  opacity: 0;
 }
 
 .move-right {
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
+  opacity: 0;
+}
+
+.show-menu {
+  -webkit-transform: translateY(0) !important;
+          transform: translateY(0) !important;
+}
+
+.nav-menuButton {
+  background-color: white;
+  padding: 10px;
 }
 
 .frontEndIndex-container {
@@ -587,12 +598,21 @@ label {
   border-bottom: 1px solid black;
   border-top: 1px solid black;
   border-right: 1px solid black;
+  border-left: 1px solid black;
 }
 
 .Nav-button {
   width: 4vw;
   min-width: 45px;
   cursor: pointer;
+  position: absolute;
+}
+
+.text-sideways {
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+  bottom: 0;
 }
 
 .Nav-infoButton {
@@ -676,6 +696,7 @@ label {
 
 .enlargeContainer {
   height: 100%;
+  max-height: 100%;
   width: 1px;
   position: absolute;
   display: -webkit-box;
@@ -728,8 +749,8 @@ label {
 }
 
 .foreground-transition {
-  -webkit-transition: 0.4s all !important;
-  transition: 0.4s all !important;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
 }
 
 #background {
@@ -746,18 +767,6 @@ label {
           align-items: center;
   height: 100%;
   width: 100%;
-}
-
-.background-image {
-  height: 100%;
-  width: 100%;
-  max-height: 100%;
-}
-
-.foreground-image {
-  width: 100%;
-  height: 100%;
-  max-height: 100%;
 }
 
 .imageSelect-FilePreview {
@@ -955,6 +964,7 @@ label {
   left: 0;
   background-color: white;
   width: 100%;
+  max-height: 100%;
   z-index: 2;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
@@ -971,6 +981,8 @@ label {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  padding-bottom: 10px;
+  overflow-y: auto;
   border-top: 4px solid white;
   border-left: 4px solid white;
   border-top: 1px solid black;
@@ -1070,6 +1082,23 @@ label {
   cursor: default;
 }
 
+.full-height {
+  height: 100% !important;
+}
+
+.show-menu-desktop {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  width: 0;
+}
+
+.enlarge-preview {
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: 100%;
+  width: 100%;
+}
+
 @media only screen and (max-width: 720px) {
   .frontEndIndex-container {
     -ms-grid-columns: 100%;
@@ -1082,6 +1111,12 @@ label {
         grid-row-start: 1;
     grid-row-end: 2;
     width: 100%;
+    position: absolute;
+    z-index: 9999;
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+    -webkit-transition: 0.3s all;
+    transition: 0.3s all;
   }
   .images-container {
     -ms-grid-row: 2;
@@ -1106,6 +1141,23 @@ label {
     grid-row-end: 3;
     bottom: 0;
     border-right: 1px solid;
+    background-color: white;
+    z-index: 999;
+    width: 100% !important;
+    height: 100%;
+  }
+  .side-scroll {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    overflow-x: auto;
+  }
+  .side-scroll > div {
+    max-width: 120px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .enlargeContainer {
     -ms-grid-column: 1;
@@ -1114,7 +1166,8 @@ label {
     -ms-grid-row: 1;
         grid-row-start: 1;
     grid-row-end: 2;
-    width: 100%;
+    width: 100% !important;
+    max-height: none;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1125,12 +1178,23 @@ label {
             transform: translateY(-100%);
   }
   .enlargeContainer > div {
-    height: 100% !important;
-    width: auto !important;
+    height: auto;
+    max-width: 100%;
+    border-top: 1px solid;
+  }
+  #foreground, #background {
+    max-height: 100%;
   }
   .enlargeContainer {
     border-top: none;
     border-bottom: none;
+  }
+  .enlarge-preview {
+    -o-object-fit: contain;
+       object-fit: contain;
+    height: auto;
+    width: 100%;
+    max-height: 100%;
   }
   .Navbar {
     position: relative;
@@ -1152,6 +1216,7 @@ label {
     border-left: 1px solid;
   }
   .Nav-button {
+    position: absolute;
     height: 100%;
     width: 55px;
     position: initial;
@@ -1160,6 +1225,37 @@ label {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
+  }
+  .text-sideways {
+    -webkit-writing-mode: initial;
+        -ms-writing-mode: initial;
+            writing-mode: initial;
+  }
+  .ArtworkInfo-container {
+    padding-bottom: 10px;
+    max-height: 100%;
+    overflow-y: auto;
+  }
+  .imageSelect-FilePreview {
+    height: 100%;
+  }
+  .images-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: max-content 1fr;
+        grid-template-rows: -webkit-max-content 1fr;
+        grid-template-rows: max-content 1fr;
+  }
+  .imageSelect-container {
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .enlargeContainer {
+    position: relative;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    grid-row-end: 2;
   }
 }
 /*# sourceMappingURL=main.css.map */
