--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -335,7 +335,7 @@ $border-main-color: #bbb;
     background-color: $frame-color;
     border-top: $border-dark;
     border-left: $border-dark;
-    border-right: $border-light;
+    // border-right: $border-light;
     border-bottom: $border-light;
     overflow-y: auto;
 }
@@ -420,9 +420,18 @@ $border-main-color: #bbb;
 
 .move-left{
     transform: translateX(100%);
+    opacity: 0;
 }
 .move-right{
     transform: translateX(-100%);
+    opacity: 0;
+}
+.show-menu{
+    transform: translateY(0) !important;
+}
+.nav-menuButton{
+    background-color: white;
+    padding: 10px;
 }
 
 .frontEndIndex-container{
@@ -454,12 +463,18 @@ $border-main-color: #bbb;
     border-bottom: $border-light;
     border-top: $border-dark;
     border-right: $border-dark;
+    border-left: $border-dark;
 }
 .Nav-button{
     // position: absolute;
     width: 4vw;
     min-width: 45px;
     cursor: pointer;
+    position: absolute;
+}
+.text-sideways{
+    writing-mode: vertical-lr;
+    bottom: 0;
 }
 .Nav-infoButton{
     position: absolute;
@@ -516,6 +531,7 @@ $border-main-color: #bbb;
 }
 .enlargeContainer{
     height: 100%;
+    max-height: 100%;
     width: 1px;
     // overflow: hidden;
     position: absolute;
@@ -560,7 +576,7 @@ $border-main-color: #bbb;
 }
 .foreground-transition{
     // opacity: 1 !important;
-    transition: 0.4s all !important;
+    transition: 0.4s all;
 }
 
 #background{
@@ -575,18 +591,16 @@ $border-main-color: #bbb;
     // width: 1px;
 }
 .background-image{
-    // object-fit: none;
-    // border: 2px solid yellow;
-    height: 100%;
-    width: 100%;
-    max-height: 100%;
+    // height: 100%;
+    // width: 100%;
+    // max-height: 100%;
 }
 .foreground-image{
-    // border: 2px solid blue;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
+    // width: 100%;
+    // height: 100%;
+    // max-height: 100%;
 }
+
 .imageSelect-FilePreview{
 
     transition: 0.4s all;
@@ -717,6 +731,7 @@ $border-main-color: #bbb;
     left: 0;
     background-color: white;
     width: 100%;
+    max-height: 100%;
     z-index: 2;
     transition: 0.4s all;
     bottom: -100%;
@@ -727,6 +742,8 @@ $border-main-color: #bbb;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    padding-bottom: 10px;
+    overflow-y: auto;
 
     border-top: $border-main;
     border-left: $border-main;
@@ -807,6 +824,20 @@ $border-main-color: #bbb;
     cursor: default;
 }
 
+.full-height{
+    height: 100% !important;
+}
+.show-menu-desktop{
+    transform: translateX(-100%);
+    width: 0;
+}
+.enlarge-preview{
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+}
+
+
 @media only screen and (max-width: 720px) {
     .frontEndIndex-container{
         grid-template-columns: 100%;
@@ -816,6 +847,10 @@ $border-main-color: #bbb;
         grid-row-start: 1;
         grid-row-end: 2;
         width: 100%;
+        position: absolute;
+        z-index: 9999;
+        transform: translateY(-100%);
+        transition: 0.3s all;
     }
     .images-container{
         grid-row-start: 2;
@@ -833,24 +868,48 @@ $border-main-color: #bbb;
         grid-row-end: 3;
         bottom: 0;
         border-right: 1px solid;
+        background-color: white;
+        z-index: 999;
+        width: 100% !important;
+        height: 100%;
+    }
+    .side-scroll{
+        flex-direction: column;
+        overflow-x: auto;
+    }
+    .side-scroll > div {
+        max-width: 120px;
+        justify-content: center;
     }
     .enlargeContainer{
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 2;
-        width: 100%;
+        width: 100% !important;
+        max-height: none;
         display: flex;
         justify-content: center;
         transform: translateY(-100%);
     }
     .enlargeContainer > div {
-        height: 100% !important;
-        width: auto !important;
+        height: auto;
+        max-width: 100%;
+        border-top: 1px solid;
+    }
+    #foreground, #background{
+        // height: auto;
+        max-height: 100%;
     }
     .enlargeContainer{
         border-top: none;
         border-bottom: none;
+    }
+    .enlarge-preview{
+        object-fit: contain;
+        height: auto;
+        width: 100%;
+        max-height: 100%;
     }
     .Navbar{
         position: relative;
@@ -866,6 +925,7 @@ $border-main-color: #bbb;
         border-left: 1px solid;
     }
     .Nav-button{
+        position: absolute;
         height: 100%;
         width: 55px;
         position: initial;
@@ -873,4 +933,31 @@ $border-main-color: #bbb;
     .Nav-button_next{
         order: 3;
     }
+    .text-sideways{
+        writing-mode: initial;
+    }
+    .ArtworkInfo-container{
+        padding-bottom: 10px;
+        max-height: 100%;
+        overflow-y: auto;
+    }
+    .imageSelect-FilePreview{
+        height: 100%;
+    }
+
+    .images-container{
+        display: grid;
+        grid-template-rows: max-content 1fr;
+    }
+    .imageSelect-container{
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+    .enlargeContainer{
+        position: relative;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
   }
+
+//   *{transition: 0s all !important;}
