--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1104,8 +1104,6 @@ label {
 }
 
 .enlarge-preview {
-  -o-object-fit: contain;
-     object-fit: contain;
   height: 100%;
   width: 100%;
 }
@@ -1128,6 +1126,7 @@ label {
             transform: translateY(-100%);
     -webkit-transition: 0.3s all;
     transition: 0.3s all;
+    border-right: 1px solid;
   }
   .images-container {
     -ms-grid-row: 2;
@@ -1210,22 +1209,15 @@ label {
   .enlargeContainer > div {
     height: auto;
     max-width: 100%;
-    border-top: 1px solid;
   }
   #foreground, #background {
     max-height: 100%;
+    height: auto;
   }
   .enlargeContainer {
-    border-top: none;
+    border-top: 1px solid;
     border-bottom: none;
     z-index: 1;
-  }
-  .enlarge-preview {
-    -o-object-fit: contain;
-       object-fit: contain;
-    height: auto;
-    width: 100%;
-    max-height: 100%;
   }
   .Navbar {
     position: relative;
