--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -499,11 +499,11 @@ $border-main-color: #bbb;
     align-items: center;
 }
 .Nav-button_next{
-    top: 8vw;
+    top: 0;
     left: 0;
 }
 .Nav-button_prev{
-    top: 12vw;
+    top: 36px;
     left: 0;
 }
 .images-container{
@@ -556,7 +556,7 @@ $border-main-color: #bbb;
     transform: translateX(100%);
     right: 0;
     background-color: white;
-    // border-left: $border-main;
+    border-left: $border-dark;
     // border-right: $border-dark;
     // border-top: $border-dark;
 
@@ -742,13 +742,10 @@ $border-main-color: #bbb;
 }
 .ArtworkInfo-container{
     position: absolute;
-    // left: -1px;
-    width: 100%;
     max-height: 100%;
     z-index: 2;
     transition: 0.4s all;
     bottom: -100%;
-    opacity: 0;
     background-color: $frame-color;
     color: white;
     padding-left: 20px;
@@ -757,6 +754,7 @@ $border-main-color: #bbb;
     justify-content: flex-end;
     padding-bottom: 10px;
     overflow-y: auto;
+    right: 0;
 
     border-top: $border-dark;
     border-left: $border-dark;
@@ -969,6 +967,8 @@ $border-main-color: #bbb;
         max-height: 100%;
         overflow-y: auto;
         border-left: none;
+        z-index: 999;
+        transition: 0.4s all;
     }
     .imageSelect-FilePreview{
         height: 100%;
