--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1142,7 +1142,7 @@ label {
     overflow: hidden;
     border-left: 1px solid;
     border-right: 1px solid;
-    border-top: none;
+    border-top: 1px solid;
   }
   .imageSelect-container {
     -ms-grid-column: 1;
@@ -1166,7 +1166,9 @@ label {
             transform: translateX(0);
     border-right: none;
     border-left: none;
-    border-top: 1px solid;
+    border-top: none;
+    grid-row-start: 2;
+    grid-row-end: 3;
   }
   .imageSelect-slide {
     -webkit-transform: translateX(250px);
@@ -1205,6 +1207,13 @@ label {
     z-index: 999;
     background-color: white;
     border-top: none;
+    border-bottom: none;
+    z-index: 1;
+    position: relative;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    border-left: none;
+    border-bottom: 1px solid;
   }
   .enlargeContainer > div {
     height: auto;
@@ -1213,11 +1222,6 @@ label {
   #foreground, #background {
     max-height: 100%;
     height: auto;
-  }
-  .enlargeContainer {
-    border-top: 1px solid;
-    border-bottom: none;
-    z-index: 1;
   }
   .Navbar {
     position: relative;
@@ -1272,17 +1276,6 @@ label {
     -ms-grid-rows: max-content 1fr;
         grid-template-rows: -webkit-max-content 1fr;
         grid-template-rows: max-content 1fr;
-  }
-  .imageSelect-container {
-    -ms-grid-row: 2;
-        grid-row-start: 2;
-    grid-row-end: 3;
-  }
-  .enlargeContainer {
-    position: relative;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
-    grid-row-end: 2;
   }
 }
 /*# sourceMappingURL=main.css.map */
