--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -930,6 +930,7 @@ $border-main-color: #bbb;
         grid-row-end: 2;
         border-left: none;
         border-bottom: 1px solid;
+        height: 0px;
     }
     .enlargeContainer > div {
         height: auto;
