--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1023,13 +1023,13 @@ label {
 }
 
 .ArtworkInfo-preview {
-  width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   opacity: 0.4;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
+  opacity: 1;
 }
 
 .ArtworkInfo-preview:hover {
