--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -430,8 +430,8 @@ $border-main-color: #bbb;
     opacity: 0;
 }
 .move-right{
-    transform: translateX(-100%);
-    opacity: 0;
+    // transform: translateX(-100%);
+    // opacity: 0;
 }
 .show-menu{
     transform: translateY(0) !important;
