--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -869,6 +869,7 @@ $border-main-color: #bbb;
 @media only screen and (max-width: 720px) {
     body{
         overscroll-behavior: contain;
+        overflow: hidden;
     }
     .frontEndIndex-container{
         grid-template-columns: 100%;
