--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -871,6 +871,8 @@ $border-main-color: #bbb;
         overscroll-behavior: contain;
         overflow: hidden;
         height: 100%;
+        position: absolute;
+        bottom: 0;
     }
     #root{
         height: 100%;
